--- a/object_tools/templates/object_tools/tool_base.html
+++ b/object_tools/templates/object_tools/tool_base.html
@@ -1,7 +1,7 @@
 {% extends "admin/base_site.html" %}
-{% load i18n admin_modify adminmedia %}
+{% load i18n admin_modify adminmedia staticfiles %}
 
-{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% admin_media_prefix %}css/forms.css" />{% endblock %}
+{% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% static 'admin/' %}css/forms.css" />{% endblock %}
 
 {% block extrahead %}{{ block.super }}
 <script type="text/javascript" src="{% url admin:jsi18n %}"></script>
